Se arreglan animaciones

--- a/index.html
+++ b/index.html
@@ -122,10 +122,7 @@
             poder adentrarte en mi <i>mundo</i>, conocerme un poco más y descubrir las <strong>pasiones</strong> que me
             <strong>impulsan</strong> en cada paso que doy frente al micrófono y la vida.
           </p>
-          <div data-aos="fade-zoom-in"
-          data-aos-easing="ease-in-back"
-          data-aos-delay="500"
-          data-aos-offset="0" class="about__cont-btn-texto">
+          <div class="about__cont-btn-texto">
             <a class="btn" href="https://www.facebook.com/2103664716449476/videos/797244574863691"
               target="_blank">Escuchame en <i class="fa fa-facebook"></i></a>
             <span>Todos los <strong>jueves</strong> desde las 12:00hs hasta las 14:00hs por Radio Más Pilar <strong>FM
@@ -303,9 +300,7 @@
       <span class="fotos__dicho">"Cada foto es un fragmento de <span>tiempo</span> suspendido, una
         <span>pincelada</span> más en el lienzo..."</span>
       <div class="fotos__fondo-cubo">
-        <div  data-aos="fade-zoom-in"
-        data-aos-easing="ease-in-back"
-        data-aos-duration="1500" class="fotos__wrapper">
+        <div class="fotos__wrapper">
           <div class="fotos__box-area">
             <div class="fotos__box1">
               <img src="./img/adri-con-facu.jpeg" alt="Adriana Garcia junto a Facundo Zech">
@@ -428,7 +423,6 @@
       <div class="audioteca__texto">
         <div data-aos="fade-zoom-in"
         data-aos-easing="ease-in-back"
-        data-aos-delay="500"
         data-aos-offset="0" class="videos__cont-titulo">
           <h2 class="videos__titulo">Audioteca</h2>
         </div>
@@ -522,7 +516,6 @@
     <section id="publicidad" class="publicidad">
       <div data-aos="fade-zoom-in"
       data-aos-easing="ease-in-back"
-      data-aos-delay="500"
       data-aos-offset="0" class="videos__cont-titulo">
         <h2 class="videos__titulo">Publicidad</h2>
       </div>
