Se modifican meta tags

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Adentrate en la trayectoria de Adriana. Una apasionada locutora, comunicadora social, organizadora de eventos y periodista. Explorá su mundo a través de fotos y videos ¡Dejate cautivar por su talento y su historia!">
-  <meta property="og:title" content="Página Oficial | Adriana García">
+  <meta property="og:title" content="🎙 Página Oficial | Adriana García">
   <meta property="og:type" content="Blog">
   <meta property="og:url" content="https://nicolasjnunez.github.io/Radio-FM-88.9/">
   <meta property="og:image" content="https://raw.githubusercontent.com/NicolasJNunez/Radio-FM-88.9/main/img/adri-muneco.jpg">
   <meta property="og:description" content="Adentrate en la trayectoria de Adriana. Una apasionada locutora, comunicadora social, organizadora de eventos y periodista. Explorá su mundo a través de fotos y videos ¡Dejate cautivar por su talento y su historia!">
-  <meta property="og:site_name" content="Página Oficial | Adriana García">
+  <meta property="og:site_name" content="🎙 Página Oficial | Adriana García">
   <meta property="og:image:width" content="25">
   <meta property="og:image:height" content="25">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,7 +26,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="icon" href="./img/favicono.ico">
   <link rel="stylesheet" href="./css/styles.css">
-  <title>Página Oficial | Adriana García</title>
+  <title>🎙 Página Oficial | Adriana García</title>
 </head>
 
 <body>
