Se cambia flecha de portada

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
         <h2>Yo soy <span class="portada__multitext"></span></h2>
       </div>
       <blockquote class="portada__cont-frase-quote">
-        <span data-aos="zoom-in" class="portada__frase">De la conducta de <span>uno</span> depende el futuro de <span>todos</span></span>
-        <span data-aos="zoom-in" class="portada__quote">⎯ Alejandro Magno</span>
-        <span data-aos="zoom-in" class="portada__comillas">"</span>
+        <span class="portada__frase">De la conducta de <span>uno</span> depende el futuro de <span>todos</span></span>
+        <span class="portada__quote">⎯ Alejandro Magno</span>
+        <span class="portada__comillas">"</span>
       </blockquote>
       <a href="#about-us" class="portada__te-invito"><span class="inside-text">Te invito a recorrer mi blog</span></a>
       <a href="#about-us" class="portada__arrow-container">
