Se cambia type de portada

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Sección Portada -->
     <section class="portada">
       <div data-aos="zoom-in" class="portada__cont-type">
-        <h2>Yo soy <span class="portada__multitext"></span></h2>
+        <h2><span class="portada__multitext"></span></h2>
       </div>
       <blockquote class="portada__cont-frase-quote">
         <span class="portada__frase">De la conducta de <span>uno</span> depende el futuro de <span>todos</span></span>
@@ -325,7 +325,8 @@
       <div class="fotos__container">
         <div class="fotos__gallery-wrap">
           <div class="fotos__item fotos__item-1">
-            <p>Fuí <i>destacada</i> con la <span class="subr2">Medalla de Honor</span> por el Senado de la provincia de <strong>Buenos Aires</strong> por ser <span class="backgr">Defensora</span> de la <span class="colo">Ley de Medios y el Medioambiente</span>.</p>
+            <p>En <i>reconocimiento</i> por el <span class="subr2">notable</span> descubrimiento histórico, fuí <strong>galardonada</strong> con la
+              <i>medalla</i> al <span class="backgr">Mérito</span> por la <span class="colo">Unidad Nacional de Granaderos a Caballos</span> de la <strong>Nación Argentina</strong>.</p>
           </div>
           <div class="fotos__item fotos__item-2">
             <p>Fuí <span class="subr2">reconocida</span> periodista <strong>internacional</strong>. Distinguida por mi <span class="colo">trayectoria y membresía</span> en la <span class="backgr">FELAP</span> , cubriendo eventos <strong>nacionales</strong> de relevancia.</p>
@@ -334,10 +335,10 @@
             <p>Fuí la <strong>voz nacional</strong> anunciando la <span class="subr2">apertura</span> de la <i>línea telefónica</i> <span class="backgr">144</span> , dedicada a la <span class="colo">violencia de género</span>.</p>
           </div>
           <div class="fotos__item fotos__item-4">
-            <p>Fuí mujer <span class="subr2">destacada</span>, reconocida por mi <strong>notable</strong> <i>contribución</i> en la <span class="colo">Provincia de Buenos Aires</span> en el año <span class="backgr">2014</span> .</p>
+            <p>Fuí mujer <span class="subr2">destacada</span> en el año <strong>2014</strong>, reconocida por ser <span class="backgr">Defensora</span> de la Ley de <i>Medios</i> y el <i>Medioambiente</i> en la <span class="colo">Provincia de Buenos Aires</span>.</p>
           </div>
           <div class="fotos__item fotos__item-5">
-            <p>Aquí me entregaron el <span class="backgr">Diploma</span> en <span class="subr2">reconocimiento</span> por mi <i>labor</i> en la <strong>inclusión</strong> de personas con <span class="colo">discapacidad</span>.</p>
+            <p>Aquí me entregaron el <span class="backgr">Diploma</span> en <span class="subr2">reconocimiento</span> por mi <i>labor</i> en la <strong>inclusión</strong> de personas con <span class="colo">discapacidad</span> por el <strong>Senado</strong> de la Nación.</p>
           </div>
         </div>
       </div>
@@ -723,7 +724,7 @@
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script>
     var typingEffect = new Typed(".portada__multitext", {
-      strings: ["Adriana", "locutora", "periodista", "comunic. social", "org. de eventos"],
+      strings: ["locutora", "periodista", "com. social", "org. de eventos"],
       loop: true,
       typeSpeed: 100,
       backSpeed: 80,
