Se cambian fotos del carrousel

--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@
             <span style="--i:5;"><a href="./img/abajo-termo.jpeg" data-lightbox="adri"
                 data-title="En contra de las termoeléctricas ubicadas en Matheu"><img src="./img/abajo-termo.jpeg"
                   alt="Adriana con dos personas protestando por las termoelécrticas"></a></span>
-            <span style="--i:6;"><a href="./img/comisarios.jpg" data-lightbox="adri"
-                data-title="Junto a unos amigos comisarios"><img src="./img/comisarios.jpg"
-                  alt="Adriana junto a comisarios"></a></span>
-            <span style="--i:7;"><a href="./img/san-martin.jpg" data-lightbox="adri"
-                data-title="En importante charla sobre el descubrimiento del anillo de San Martín"><img src="./img/san-martin.jpg"
-                  alt="Adriana junto a un grupo de personas hablando de San Martín"></a></span>
+            <span style="--i:6;"><a href="./img/coronel.png" data-lightbox="adri"
+                data-title="Junto al Coronel Mayor del Ejército Argentino"><img src="./img/coronel.png"
+                  alt="Adriana junto al Coronel mayor del Ejército Argentino"></a></span>
+            <span style="--i:7;"><a href="./img/san-martin.jpeg" data-lightbox="adri"
+                data-title="Junto a Cristina Fernández de Kirchner"><img src="./img/san-martin.jpeg"
+                  alt="Junto a Cristina Fernández de Kirchner"></a></span>
             <span style="--i:8;"><a href="./img/marco.jpg" data-lightbox="adri"
                 data-title="Dia de filmación junto a Marco Markik"><img src="./img/marco.jpg"
                   alt="Adriana junto a Marco Markik y un grupo de personas en La Posta Pinazo"></a></span>
