Se modifica horario about us

--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
           <div class="about__cont-btn-texto">
             <a class="btn" href="https://www.facebook.com/2103664716449476/videos/797244574863691"
               target="_blank">Escuchame en <i class="fa fa-facebook"></i></a>
-            <span>Todos los <strong>jueves</strong> desde las 12:00hs hasta las 14:00hs por Radio Más Pilar <strong>FM
-                88.9</strong></span>
+            <span>Todos los <strong class="subr22">JUEVES</strong> desde las <span class="colo22">12:00hs</span> hasta las <span class="colo22">14:00hs</span> por <strong>Radio Más Pilar</strong> <span class="backgr22">FM
+                88.9</span></span>
           </div>
         </div>
       </div>
