--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             poder adentrarte en mi <i>mundo</i>, conocerme un poco más y descubrir las <strong>pasiones</strong> que me
             <strong>impulsan</strong> en cada paso que doy frente al micrófono y la vida.
           </p>
-          <div class="about__cont-btn-texto">
+          <div data-aos="zoom-in" class="about__cont-btn-texto">
             <a class="btn" href="https://www.facebook.com/2103664716449476/videos/797244574863691"
               target="_blank">Escuchame en <i class="fa fa-facebook"></i></a>
             <span>Todos los <strong class="subr22">JUEVES</strong> desde las <span class="colo22">12:00hs</span> hasta las <span class="colo22">14:00hs</span> por <strong>Radio Más Pilar</strong> <span class="backgr22">FM
