Se agrega link a grupo

--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
       <p>Creado por <span>Nicolás Javier Núñez &copy;</span> 2023</p>
     </div>
   </footer>
-
+  <a href="https://chat.whatsapp.com/DFtTw5Yvnjv4cqeZiZ5IbU" class="btn-wsp2" target="_blank"></a>
   <a href="https://api.whatsapp.com/send?phone=5491161561118" class="btn-wsp" target="_blank"><i
       class="bi bi-whatsapp"></i></a>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
