--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
               <i>medalla</i> al <span class="backgr">Mérito</span> por la <span class="colo">Unidad Nacional de Granaderos a Caballos</span> de la <strong>Nación Argentina</strong>.</p>
           </div>
           <div class="fotos__item fotos__item-2">
-            <p>Fuí <span class="subr2">reconocida</span> periodista <strong>internacional</strong>. Distinguida por mi <span class="colo">trayectoria y membresía</span> en la <span class="backgr">UTBA</span> , cubriendo eventos <strong>nacionales</strong> de relevancia.</p>
+            <p>Fuí <span class="subr2">reconocida</span> periodista. Distinguida por mi <span class="colo">trayectoria y membresía</span> en la <span class="backgr">UTPBA</span> , cubriendo eventos <strong>nacionales</strong> de relevancia. También soy <strong>miembro</strong> de la <span class="colo">FELAP</span> donde cubro eventos <i>internacionales</i></p>
           </div>
           <div class="fotos__item fotos__item-3">
             <p>Fuí la <strong>voz nacional</strong> anunciando la <span class="subr2">apertura</span> de la <i>línea telefónica</i> <span class="backgr">144</span> , dedicada a la <span class="colo">violencia de género</span>.</p>
