Se arregla nombre en seccion publicidad

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
           <img src="./img/ad-3.jpg" class="img" alt="Municipalidad Mario ishi">
 
           <div class="text">
-            <p class="h3"> Intendencia Mario Ishi </p>
+            <p class="h3"> Intendencia Mario Ishii </p>
             <p class="p"> Jose C. Paz </p>
 
             <div class="icon-box">
