--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   histórico, desde las iniciales grabadas en el anillo hasta su conexión con el combate de
                   <strong>San Lorenzo</strong>. Enganchate en esta narrativa llena de <i>misterio</i> y
                   <i>valor histórico</i>.</p>
-                  <a href="https://www.youtube.com/watch?v=-xvnPEDzJjc" target="_blank" class="btn">Ir al video <i
+                  <a href="https://www.pilaradiario.com/informacion-general/anillo-las-iniciales-san-martin-que-determinaron-los-estudios-antropologicos-n5445221" target="_blank" class="btn">Más información <i
                     class="bi bi-box-arrow-up-right"></i></a>
               </figcaption>
             </figure>
