Se agregar publicidades

--- a/index.html
+++ b/index.html
@@ -643,6 +643,62 @@
           </div>
         </a>
 
+        <a class="card--9" href="./img/3kitchen.jpeg" data-lightbox="publi" data-title="Food Kitchen">
+          <img src="./img/3kitchen.jpeg" class="img" alt="Food Kitchen">
+
+          <div class="text">
+            <p class="h3"> Food Kitchen </p>
+            <p class="p"> Pilar </p>
+
+            <div class="icon-box">
+              <p class="span">Comidas
+              </p>
+            </div>
+          </div>
+        </a>
+        
+        <a class="card--9" href="./img/delviso-driving.jpeg" data-lightbox="publi" data-title="Driving Range">
+          <img src="./img/delviso-driving.jpeg" class="img" alt="Driving Range">
+
+          <div class="text">
+            <p class="h3"> Delviso Driving Range </p>
+            <p class="p"> Del viso </p>
+
+            <div class="icon-box">
+              <p class="span">Golf
+              </p>
+            </div>
+          </div>
+        </a>
+
+        <a class="card--9" href="./img/pana1.jpeg" data-lightbox="publi" data-title="Panaderia Villa Del Carmen">
+          <img src="./img/pana1.jpeg" class="img" alt="Panaderia Villa Del Carmen">
+
+          <div class="text">
+            <p class="h3"> Panaderia Villa Del Carmen </p>
+            <p class="p"> Del viso </p>
+
+            <div class="icon-box">
+              <p class="span">Panaderia
+              </p>
+            </div>
+          </div>
+        </a>
+
+        <a class="card--9" href="./img/pana2.jpeg" data-lightbox="publi" data-title="Amarena">
+          <img src="./img/pana2.jpeg" class="img" alt="Amarena">
+
+          <div class="text">
+            <p class="h3"> Amarena </p>
+            <p class="p"> Del viso </p>
+
+            <div class="icon-box">
+              <p class="span">Panaderia
+              </p>
+            </div>
+          </div>
+        </a>
+
       </div>
 
       <div>
