Se agregar publicidades

--- a/index.html
+++ b/index.html
@@ -699,6 +699,34 @@
           </div>
         </a>
 
+        <a class="card--9" href="./img/salon-jazmines.jpeg" data-lightbox="publi" data-title="Salon Jazmines">
+          <img src="./img/pana2.jpeg" class="img" alt="Salón Jazmines">
+
+          <div class="text">
+            <p class="h3"> Salón Jazmines Del Viso </p>
+            <p class="p"> Del viso </p>
+
+            <div class="icon-box">
+              <p class="span">Salón
+              </p>
+            </div>
+          </div>
+        </a>
+
+        <a class="card--9" href="./img/ale-san.jpeg" data-lightbox="publi" data-title="Electrodomesticos Ale San">
+          <img src="./img/pana2.jpeg" class="img" alt="Electrodomesticos Ale San">
+
+          <div class="text">
+            <p class="h3"> Electrodomesticos Ale San </p>
+            <p class="p"> Del viso </p>
+
+            <div class="icon-box">
+              <p class="span">Electrodomésticos
+              </p>
+            </div>
+          </div>
+        </a>
+
       </div>
 
       <div>
