Se corrige publicidad

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
           <img src="./img/ad-1.jpg" class="img" alt="Empresa Los Jazmines de eventos">
           <div class="text">
             <p class="h3"> Los Jazmines </p>
-            <p class="p"> Del Viso </p>
+            <p class="p"> Del viso </p>
             <div class="icon-box">
               <p class="span">Eventos
               </p>
@@ -564,7 +564,7 @@
 
           <div class="text">
             <p class="h3"> Villa Del Carmen </p>
-            <p class="p"> Del Viso </p>
+            <p class="p"> Del viso </p>
 
             <div class="icon-box">
               <p class="span">Frigorífico
@@ -661,7 +661,7 @@
           <img src="./img/delviso-driving.jpeg" class="img" alt="Driving Range">
 
           <div class="text">
-            <p class="h3"> Delviso Driving Range </p>
+            <p class="h3"> Del viso Driving Range </p>
             <p class="p"> Del viso </p>
 
             <div class="icon-box">
@@ -700,7 +700,7 @@
         </a>
 
         <a class="card--9" href="./img/salon-jazmines.jpeg" data-lightbox="publi" data-title="Salon Jazmines">
-          <img src="./img/pana2.jpeg" class="img" alt="Salón Jazmines">
+          <img src="./img/salon-jazmines.jpeg" class="img" alt="Salón Jazmines">
 
           <div class="text">
             <p class="h3"> Salón Jazmines Del Viso </p>
@@ -714,10 +714,10 @@
         </a>
 
         <a class="card--9" href="./img/ale-san.jpeg" data-lightbox="publi" data-title="Electrodomesticos Ale San">
-          <img src="./img/pana2.jpeg" class="img" alt="Electrodomesticos Ale San">
+          <img src="./img/ale-san.jpeg" class="img" alt="Electrodomesticos Ale San">
 
           <div class="text">
-            <p class="h3"> Electrodomesticos Ale San </p>
+            <p class="h3"> Electrodomésticos Ale San </p>
             <p class="p"> Del viso </p>
 
             <div class="icon-box">
