--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
             <span style="--i:6;"><a href="./img/coronel.png" data-lightbox="adri"
                 data-title="Junto al Coronel Mayor del Ejército Argentino"><img src="./img/coronel.png"
                   alt="Adriana junto al Coronel mayor del Ejército Argentino"></a></span>
-            <span style="--i:7;"><a href="./img/san-martin.jpeg" data-lightbox="adri"
-                data-title="Junto a Cristina Fernández de Kirchner"><img src="./img/san-martin.jpeg"
-                  alt="Junto a Cristina Fernández de Kirchner"></a></span>
+            <span style="--i:7;"><a href="./img/adri-amigos.jpeg" data-lightbox="adri"
+                data-title="Junto a unos camaradas"><img src="./img/adri-amigos.jpeg"
+                  alt="Junto a unos camaradas"></a></span>
             <span style="--i:8;"><a href="./img/marco.jpg" data-lightbox="adri"
                 data-title="Dia de filmación junto a Marco Markik"><img src="./img/marco.jpg"
                   alt="Adriana junto a Marco Markik y un grupo de personas en La Posta Pinazo"></a></span>
